VDR Plugin 'cdplayer' Revision History
--------------------------------------

2010-04-04: Version 0.0.1

- Initial revision.

2010-06-10: Version 0.0.2

- First public release.

2010-06-12: Version 0.0.3

- Fix compile problem when no graphtft is used. Users of graphtft must now
  enable a switch in the Makefile.
- CDDB-Query for multi session CDs is working.
 
2010-06-14: Version 0.0.4

- Fix possible crashes.
- Enhanced OSD, allows scrolling now

2010-06-17: Version 0.0.5

- Fix OSD problem, that OSD is now always open after startup.
- SVDRP Support.
- Detail View.

2010-07-04: Version 0.0.6

- Italian translation.
- Fix crash with skin elchi.
- Workaround for crashing cddb library when no $HOME is set.
- Add support for cdparanoia.
- Fixes for FF-DVB Card support.
- Limit CD-Speed.

2010-07-x: Version 1.0.0

- Update buffer handling